--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
         "ffmpeg": "^0.0.4",
+        "glob": "^7.2.0",
         "libsodium-wrappers": "^0.7.9",
         "yt-search": "^2.10.2",
         "ytdl-core": "^4.9.2"
@@ -27,6 +28,7 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/ffmpeg": "^1.0.4",
+        "@types/glob": "^7.2.0",
         "@types/node": "^17.0.4",
         "@types/yt-search": "^2.3.2",
         "@typescript-eslint/eslint-plugin": "^5.8.0",
