--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-    "name": "djdiscord",
-    "version": "2.0.0",
-    "private": true,
-    "author": "xannysan",
-    "scripts": {
-        "prebuild": "del-cli ./dist/",
-        "build": "set NODE_ENV='production' && tsc",
-        "dev": "set NODE_ENV='development' && nodemon dist/index.js",
-        "lint": "eslint . --ext .ts",
-        "start": "node dist/index.js",
-        "watch": "tsc -w"
-    },
-    "dependencies": {
-        "@discordjs/opus": "^0.7.0",
-        "@discordjs/voice": "^0.7.5",
-        "discord-music-player": "^8.3.1",
-        "discord-ytdl-core": "^5.0.4",
-        "discord.js": "^13.3.1",
-        "dotenv": "^10.0.0",
-        "express": "^4.17.2",
-        "ffmpeg": "^0.0.4",
-        "glob": "^7.2.0",
-        "libsodium-wrappers": "^0.7.9",
-        "yt-search": "^2.10.2",
-        "ytdl-core": "^4.9.2"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.13",
-        "@types/ffmpeg": "^1.0.4",
-        "@types/glob": "^7.2.0",
-        "@types/node": "^17.0.4",
-        "@types/yt-search": "^2.3.2",
-        "@typescript-eslint/eslint-plugin": "^5.8.0",
-        "@typescript-eslint/parser": "^5.8.0",
-        "copyfiles": "^2.4.1",
-        "del-cli": "^4.0.1",
-        "eslint": "^8.5.0",
-        "nodemon": "^2.0.15",
-        "prettier": "^2.5.1",
-        "typescript": "^4.5.4"
-    }
+  "name": "djdiscord",
+  "version": "3.0.0",
+  "private": true,
+  "author": "xannysan",
+  "scripts": {
+    "prebuild": "del-cli ./dist/",
+    "build": "set NODE_ENV='production' && tsc",
+    "dev": "set NODE_ENV='development' && nodemon dist/index.js",
+    "lint": "eslint . --ext .ts",
+    "start": "node dist/index.js",
+    "watch": "tsc -w"
+  },
+  "dependencies": {
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.10.0",
+    "dbots": "^11.0.0",
+    "discord-music-player": "^8.3.2",
+    "discord-ytdl-core": "^5.0.4",
+    "discord.js": "^13.8.1",
+    "dotenv": "^16.0.1",
+    "dotenv-safe": "^8.2.0",
+    "express": "^4.18.1",
+    "ffmpeg": "^0.0.4",
+    "glob": "^8.0.3",
+    "libsodium-wrappers": "^0.7.10",
+    "yt-search": "^2.10.3",
+    "ytdl-core": "^4.11.0"
+  },
+  "devDependencies": {
+    "@types/dotenv-safe": "^8.1.2",
+    "@types/express": "^4.17.13",
+    "@types/ffmpeg": "^1.0.4",
+    "@types/glob": "^7.2.0",
+    "@types/node": "^18.0.3",
+    "@types/yt-search": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^4.0.1",
+    "eslint": "^8.19.0",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
+  }
 }
